--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pytest-django = "^4.9.0"
 django-environ = "^0.11.2"
 mysqlclient = "^2.2.5"
 isort = "^5.13.2"
+sqlalchemy = "^2.0.36"
+alembic = "^1.14.0"
 
 
 [build-system]
