--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3'
 services:
   nginx:
     # image: nginx-b_demo:latest
@@ -15,6 +16,7 @@ services:
       context: .
       dockerfile: Dockerfile
     command: /bin/bash ./docker-entrypoint-wsgi.sh
+    env_file: ./.env
     depends_on:
       - db
 
@@ -25,3 +27,11 @@ services:
       - ${DB_PORT}:3306
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
+    volumes:
+      - ./deployment/mysql/init-databases.sql:/docker-entrypoint-initdb.d/init-databases.sql
