--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-djangorestframework-jsonapi
-djangorestframework-jsonapi[django-filter]
-pytest
-pytest-django
-mysqlclient
-django-environ
-factory_boy
-alembic
+alembic==1.14.0
+django-environ==0.11.2
+django-filter==24.3
+djangorestframework==3.15.2
+djangorestframework-jsonapi==7.1.0
+factory_boy==3.3.1
+flake8==7.1.1
+isort==5.13.2
+mysqlclient==2.2.5
+pytest==8.3.3
+pytest-django==4.9.0
+SQLAlchemy==2.0.36
