--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,4 @@ build-backend = "poetry.core.masonry.api"
 multi_line_output = 3
 line_length = 120
 include_trailing_comma = true
+src_paths = ["b2bpay", "tests"]
